--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>🍉 Speak Up Now!</title>
+  <title>🍉 Speak Up!</title>
   <style>
     :root {
       --bg: #0b0b0c;
@@ -437,4 +437,5 @@ The ongoing crisis in Gaza demands your immediate attention and action. As repre
     applyLang();
   </script>
 </body>
+
 </html>
