--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     .button-89 {
       --b: 3px;
       --s: .45em;
-      --color: #373B44;
+      --color: #ffffff;
       padding: calc(.5em + var(--s)) calc(.9em + var(--s));
       color: var(--color);
       --_p: var(--s);
@@ -242,7 +242,7 @@
       user-select: none;
       -webkit-user-select: none;
       touch-action: manipulation;
-      background-color: rgba(255, 255, 255, 0.902);
+      background-color: #8B0000;
     }
     .button-89:hover,
     .button-89:focus-visible {
