--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@ The ongoing crisis in Gaza demands your immediate attention and action. As repre
       'l.dejong@tweedekamer.nl', 'a.joseph@tweedekamer.nl', 'i.kahraman@tweedekamer.nl',
       'r.kamminga@tweedekamer.nl', 'b.kathmann@tweedekamer.nl', 'b.vankent@tweedekamer.nl',
       'a.kisteman@tweedekamer.nl', 'j.klaver@tweedekamer.nl', 'm.koekkoek@tweedekamer.nl',
-      'w.koops@tweedekamer.nl', 'a.kops@tweedekamer.nl', 'd.dekort@tweedekamer.nl',
-      'rvd.pers.kh@minaz.nl', 'info@minienw.nl', 'info@minszw.nl', 'info@minbzk.nl',
-      'info@minjenv.nl', 'info@minfin.nl', 'info@minbuza.nl', 'info@mindef.nl', 'info@minez.nl'
+      'w.koops@tweedekamer.nl', 'a.kops@tweedekamer.nl'
     ];
     const sources = {
       nl: [
@@ -375,3 +373,4 @@ The ongoing crisis in Gaza demands your immediate attention and action. As repre
   </script>
 </body>
 </html>
+
