--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       background: url('palestine.jpg') center/cover no-repeat;
       background-size: cover;
       width: 100%;
-      height: 100%;
+      height: 115%;
       filter: blur(1px);
       z-index: 0;
     }
@@ -355,9 +355,9 @@
         btn2sub: 'Draag bij met een donatie voor acties of levensreddende hulp zoals water en voedselpakketten.',
         btn3: 'Referenties & Bronnen',
         panelTitle: 'Referenties',
-        referenceText: 'Informatie omtrent situaties die actie vereisen.',
+        referenceText: 'Informatie omtrent situaties die actie vereisen',
         sectionTitle: 'Bronnen',
-        sourceText: 'Onafhankelijke en neutrale bronnen die bewijs leveren van de Palestijnse genocide door Israël.',
+        sourceText: 'Onafhankelijke en neutrale bronnen die bewijs leveren van de Palestijnse genocide door Israël',
         subject: 'STOP het Geweld',
         body: `Beste Leden van de Tweede Kamer en Ministers van Nederland,
 De aanhoudende crisis in Gaza vereist uw onmiddellijke aandacht en actie. Als vertegenwoordigers van een natie die zich inzet voor mensenrechten en internationaal recht, bekleedt u geprivilegieerde en machtige posities om een verschil te maken. Wij roepen u dringend op om een onmiddellijk einde te eisen aan het geweld in Gaza, dat enorm lijden en verlies van mensenlevens heeft veroorzaakt. Daarnaast smeken wij u om te pleiten voor uitgebreide sancties tegen Israël om verdere escalatie te stoppen en verantwoording te waarborgen. Uw leiderschap is cruciaal om rechtvaardigheid te handhaven, onschuldige levens te beschermen en de toewijding van Nederland aan wereldwijde vrede en solidariteit te versterken. Handel nu om verdere tragedie te voorkomen.`,
@@ -376,9 +376,9 @@ De aanhoudende crisis in Gaza vereist uw onmiddellijke aandacht en actie. Als ve
         btn2sub: 'Make a donation for demonstrations or life-saving aid such as water and food packages.',
         btn3: 'References & Sources',
         panelTitle: 'References',
-        referenceText: 'Information regarding situations that need action.',
+        referenceText: 'Information regarding situations that need action',
         sectionTitle: 'Sources',
-        sourceText: 'Independent and neutral sources proving the Palestinian Genocide by Israel.',
+        sourceText: 'Independent and neutral sources proving the Palestinian Genocide by Israel',
         subject: 'STOP the violence',
         body: `Dear Members of the Tweede Kamer and Ministers of the Netherlands,
 The ongoing crisis in Gaza demands your immediate attention and action. As representatives of a nation committed to human rights and international law, you hold privileged and powerful positions to make a difference. We urgently call on you to demand an immediate cessation of the violence in Gaza, which has caused immense suffering and loss of life. Furthermore, we urge you to advocate for comprehensive sanctions against Israel to halt further escalation and ensure accountability. Your leadership is crucial to uphold justice, protect innocent lives, and reinforce the Netherlands' commitment to global peace and solidarity. Act now to prevent further tragedy.`,
